--- a/result.html
+++ b/result.html
@@ -66,7 +66,7 @@
       <div class="container">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Result</a></li>
             <li class="breadcrumb-item active" id="currentTab"></li>
           </ol>
         </nav>
@@ -74,12 +74,6 @@
     </div>
 
     <!-- Hình Slide -->
-    <div class="slide">
-      <img
-        src="img/pngtree-chinese-style-landscape-background-picture-image_938865.jpg"
-        alt="Image 1"
-      />
-    </div>
 
     <!-- Footer -->
     <footer>
