--- a/rep7.html
+++ b/rep7.html
@@ -1,60 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Math Learning Platform</title>
+    <title>Trang Web</title>
     <link
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <head>
-      <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    </head>
-    
-    <link rel="stylesheet" href="css/rep7.css">
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/rep7.css" />
+
+    <!-- Thêm Chart.js -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   </head>
-
-  <body>
-    <header>
-      <div class="logo">
-        <a href="index.html">
-          <h1>AN</h1>
-        </a>
-      </div>
-
-      <div class="project-button">
-        <nav>
-          <ul>
-            <li><a class="text-primary" href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="lab1.html">   </a></li>
+  <>
+    <!-- Thanh menu -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+      <div class="container">
+        <div class="navbar-brand">LOGO</div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-toggle="dropdown"
+              >
+                Labs
+              </a>
+              <div class="dropdown-menu">
+                <a class="dropdown-item" href="lab1.html">Lab 1</a>
+                <a class="dropdown-item" href="lab2.html">Lab 2</a>
+                <a class="dropdown-item" href="lab3.html">Lab 3</a>
+                <a class="dropdown-item" href="lab4.html">Lab 4</a>
+                <a class="dropdown-item" href="lab5.html">Lab 5</a>
+                <a class="dropdown-item" href="rep56.html">Lab 6</a>
+              </div>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="result.html">Result</a>
+            </li>
           </ul>
-          <main class="content">
-            <div class="labs-container">
-              <a href="lab1.html">Lab1</a>
-              <a href="lab2.html">Lab2</a>
-              <a href="lab3.html">Lab3</a>
-              <a href="lab4.html">Lab4</a>
-              <a href="lab5.html">Lab5</a>
-              <a href="rep56.html">Lab6</a>
-            </div>
+        </div>
+      </div>
+    </nav>
+
+    <!-- Breadcrumb -->
+    <div class="breadcrumb">
+      <div class="container">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Labs</a></li>
+            <li class="breadcrumb-item active" id="currentTab">Lab6/rep5,6</li>
+          </ol>
         </nav>
       </div>
-    </header>
+    </div>
     <li class="dropdown">
       <a href="#" id="lab6-toggle">
         <span>Repo</span>
         <i class="bi bi-chevron-down toggle-dropdown"></i>
       </a>
-      <ul id="lab6-dropdown" style="display: none;">
+      <ul id="lab6-dropdown" style="display: none">
         <li><a href="rep56.html">Rep 5_6</a></li>
         <li><a href="rep7.html">Rep 7</a></li>
         <li><a href="rep8.html">Rep 8</a></li>
       </ul>
     </li>
-         
+    <!-- Thanh điều hướng chủ đề -->
     <div class="container">
       <!-- Cột bên trái -->
       <div class="left-column">
@@ -122,6 +155,7 @@
           assessment.
         </div>
 
+        <!-- Các câu hỏi -->
         <div class="answers-section">
           <div class="question correct">
             <strong>Question 1</strong> - Correct<br />
@@ -137,32 +171,30 @@
             <strong>Question 3</strong> - Incorrect<br />
             What is the primary purpose of a CI/CD pipeline?
           </div>
-          <!-- Thêm các câu hỏi khác nếu cần -->
         </div>
       </div>
     </div>
-    <script src="script/rep56.js"></script>
-    <script src="script/rep7.js"></script>
+
+    <!-- Footer -->
     <footer>
       <div class="footer-container">
-        <div class="footer-group-info">
+        <div>
           <h3>Web cá nhân</h3>
           <p>
-            Nong Lam University - Ho Chi Minh City
+            Hồ Chí Minh Nông Lâm University<br />Thủ Đức City, Hồ Chí Minh City,
+            Việt Nam
           </p>
           <p>Phone: 0349647423<br />Email: 23130004@st.hcmuaf.edu.vn</p>
         </div>
-
-        <div class="footer-links">
+        <div>
           <h4>Useful Links</h4>
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About </a></li>
-            <li><a href="lab.html">Lab</a></li>
+            <li><a href="lab1.html">Lab</a></li>
           </ul>
         </div>
-
-        <div class="footer-members">
+        <div>
           <h4>Our Members</h4>
           <ul>
             <li>
@@ -170,8 +202,7 @@
             </li>
           </ul>
         </div>
-
-        <div class="footer-newsletter">
+        <div>
           <h4>Newsletter</h4>
           <form>
             <input type="email" placeholder="Email is here" required />
@@ -180,8 +211,13 @@
         </div>
       </div>
     </footer>
-  </body>
-</html>
 
+    <!-- Các script -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script src="script/rep7.js"></script>
+    <script src="script/rep56.js"></script>
   </body>
 </html>
