--- a/lab4.html
+++ b/lab4.html
@@ -370,7 +370,7 @@
         </div>
       </div>
     </footer>
-
+    <script src="script/lab4.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
